# BrainMuscles

./: .gitmodules
.circleci/: config.yml
Documents/: brainmuscles.odt
cmake/: CMakeLists.txt
cmake/BrainMuscles/: CMakeLists.txt
cmake/experiment/: CMakeLists.txt
cmake/experiment/test/: CMakeLists.txt
cmake/experiment/test/simple/json/: CMakeLists.txt
cmake/experiment/type/: CMakeLists.txt
cmake/tool/: CMakeLists.txt
cmake/tool/prebuild/: CMakeLists.txt
docs/: brainmuscles.odt
docs/template-docs/: classDocTemplate.ott
experiment/test/: test-debug.cpp  test-file.cpp  test-simple-functional.cpp  test-simple-json.cpp  test-simple-memory.cpp  test-simple-output-json.cpp  test-simple-type-name.cpp  test.cpp
experiment/type/container/: type-container-array.cpp  type-container-vector.cpp
include/: Test.h
include/io/: Stream.h
include/io/stream/: File.h  Management.h
include/io/stream/file/: Type.h
include/test/: Configure.h  File.h  Source.h  Test.h  Variable.h
include/test/file/: Info.h
include/test/simple/: Memory.h
include/test/simple/functional/: Function.h
include/test/simple/functional/function/: Member.h
include/test/simple/json/: Constant.h  Container.h  Memory.h  Type.h  Value.h
include/test/simple/json/exception/: BadCast.h  UndefinedType.h
include/test/simple/json/helper/: Cast.h  Enum.h  Tag.h  Traits.h  Value.h
include/test/simple/json/pointer/: Value.h
include/test/simple/json/type/: Number.h  String.h
include/test/simple/json/value/: Array.h  False.h  Null.h  Number.h  Object.h  String.h  True.h
include/test/simple/log/output/: Arguments.h  Call.h  Constant.h  Format.h  Handle.h  Set.h  Signal.h  Value.h
include/test/simple/memory/: Block.h  Pool.h
include/test/simple/memory/block/: Body.h  Data.h  Header.h
include/test/simple/memory/pool/: Linkers.h
include/test/simple/output/json/: Type.h
include/test/simple/type/: Name.h
include/test/source/: Constant.h  Environment.h  Error.h  Info.h  Interface.h  Result.h  Stage.h  Status.h
include/test/source/environment/: Trace.h
include/test/source/environment/trace/: Function.h  Interface.h
include/test/source/error/: Message.h  Numbers.h
include/test/source/function/: Flags.h
include/test/source/info/: Delegate.h  Flags.h
include/test/source/interface/: Flags.h
include/test/source/status/: Flags.h
include/test/source/task/: Default.h  Flags.h  Interface.h  Stage.h
include/test/source/task/default/: Stage.h
include/test/source/task/test/: Stage.h
include/test/test/: Info.h  Message.h
include/test/test/info/: Base.h
include/test/test/message/: Base.h
include/trait/: Storage.h
include/trait/storage/: GetIndex.h  GetSize.h  IsContainValue.h  ToTypeArray.h
include/type/: Cloneable.h  Cloning.h  Container.h  Iterators.h  Journal.h  Node.h  Singleton.h
include/type/automatic/: Destroy.h
include/type/automatic/destroy/: Base.h  Function.h  Management.h
include/type/constant/: String.h
include/type/container/: Array.h  Base.h  Element.h  Vector.h
include/type/container/array/: Definition.h  Get.h  Iterator.h
include/type/container/array/iterator/: Definition.h
include/type/container/definition/: Base.h  IsType.h
include/type/container/element/: Base.h  IsType.h
include/type/container/member/: M_StandardContainer.h  M_StandartContainer.h
include/type/container/member/capacity/: M_Capacity.h  M_Empty.h  M_MaximumSize.h  M_Reserve.h  M_Resize.h  M_ShrinkToFit.h  M_Size.h
include/type/container/member/element/: M_Data.h  M_Element.h  M_First.h  M_Last.h
include/type/container/member/iterator/: M_ConstIterator.h  M_ConstReverseIterator.h  M_Iterator.h  M_ReverseIterator.h
include/type/container/member/modifier/: M_Assign.h  M_Clear.h  M_Emplace.h  M_EmplaceBack.h  M_Erase.h  M_Fill.h  M_Insert.h  M_PopBack.h  M_PushBack.h  M_Swap.h
include/type/container/member/observer/: M_Data.h  M_GetAllocator.h
include/type/container/standard/vector/: ConstIterator.h  ConstReverseIterator.h  Iterator.h  ReverseIterator.h
include/type/container/vector/: Definition.h  Iterator.h
include/type/container/vector/iterator/: Definition.h  Handle.h  Input.h  (+1 more)
include/type/iterator/: Base.h  Tag.h
include/type/iterator/derived/: Definition.h  Info.h
include/type/iterator/handle/: Definition.h  Info.h
include/type/iterator/member/: M_Arithmetic.h  M_Assignment.h  M_Decrement.h  M_Equality.h  M_Increment.h  M_Inequality.h  M_LeftValue.h  M_Offset.h  M_RightValue.h
include/type/iterator/tag/: Bidirectional.h  Forward.h  Input.h  RandomAccess.h
include/type/iterator/type/: Definition.h  Info.h
include/type/journal/: Trait.h
include/type/node/: Child.h  Direction.h  Track.h
include/type/node/direction/: Index.h
include/type/trait/: AutoDestroy.h  Integers.h  Object.h  Pointer.h  Singleton.h  Storage.h  Types.h
include/type/trait/automatic/: Destroy.h
include/type/trait/conditional/: And.h  Index.h  Or.h
include/type/trait/integers/: Filler.h  Function.h  GetIndex.h  GetSize.h  IsContainValue.h  ToTypeArray.h
include/type/trait/storage/: Filler.h  Function.h  GetIndex.h  GetSize.h  IsContainValue.h  ToTypeArray.h
include/type/trait/types/: Base.h  Filler.h  Function.h  GetIndex.h  GetSize.h
project/windows/vs2017/BrainMuscles/: BrainMuscles.sln
scr/io/: Stream.cpp
script/windows/: environment.bat
script/windows/tools/: get_dir_from_list.bat
script/windows/utils/: validation.bat
src/BrainMuscles/io/: Stream.cpp
src/BrainMuscles/test/: Variable.cpp
src/tool/: Character.h  Definition.h  Environment.cpp  Environment.h  PreBuild.cpp  PreBuild.h  PreBuild.main.cpp
src/tool/character/: Flags.h  Helper.h  Value.h  Values.h
src/tool/character/definition/: Ascii.h  Utf16.h  Utf8.h
src/tool/character/flags/: Blocks.cpp  Blocks.h  Value.h
src/tool/environment/: Arguments.cpp  Arguments.h  Flag.cpp  Flag.h
src/tool/file/: Read.cpp  Read.h
src/tool/prebuild/: Flag.cpp  Flag.h
src/tool/source/: Column.cpp  Column.h
structure/linkedlist/: Link.h  Linkedlist.h  Node.h  Point.h  SingleLinklist.h
(+209 files in other folders)
