include_directories (${PROJECT_SOURCE_DIR}/../include)


#INCLUDE
set (INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../include)
set (INCLUDE_FILES
	${INCLUDE_DIR}/Test.h)
#INCLUDE_IO
set (INCLUDE_IO_DIR ${INCLUDE_DIR}/io)
set (INCLUDE_IO_FILES 
	${INCLUDE_IO_DIR}/Stream.h)
#INCLUDE_IO_STREAM	
set (INCLUDE_IO_STREAM_DIR ${INCLUDE_IO_DIR}/stream)
set (INCLUDE_IO_STREAM_FILES 
	${INCLUDE_IO_STREAM_DIR}/File.h
	${INCLUDE_IO_STREAM_DIR}/Management.h)
#INCLUDE_IO_STREAM_FILE
set (INCLUDE_IO_STREAM_FILE_DIR ${INCLUDE_IO_STREAM_DIR}/file)
set (INCLUDE_IO_STREAM_FILE_FILES 
	${INCLUDE_IO_STREAM_FILE_DIR}/Type.h)
#INCLUDE_TEST
set (INCLUDE_TEST_DIR ${INCLUDE_DIR}/test)
set (INCLUDE_TEST_FILES 
	${INCLUDE_TEST_DIR}/Configure.h)
#INCLUDE_TEST_TEST
set (INCLUDE_TEST_TEST_DIR ${INCLUDE_TEST_DIR}/test)
set (INCLUDE_TEST_TEST_FILES
	${INCLUDE_TEST_TEST_DIR}/Info.h 
	${INCLUDE_TEST_TEST_DIR}/Message.h)
#INCLUDE_TEST_TEST_INFO
set (INCLUDE_TEST_TEST_INFO_DIR ${INCLUDE_TEST_TEST_DIR}/info)
set (INCLUDE_TEST_TEST_INFO_FILES
	${INCLUDE_TEST_TEST_INFO_DIR}/Base.h)
#INCLUDE_TEST_TEST_MESSAGE
set (INCLUDE_TEST_TEST_MESSAGE_DIR ${INCLUDE_TEST_TEST_DIR}/message)
set (INCLUDE_TEST_TEST_MESSAGE_FILES
	${INCLUDE_TEST_TEST_MESSAGE_DIR}/Base.h)
#INCLUDE_TYPE
set (INCLUDE_TYPE_DIR ${INCLUDE_DIR}/type)
set (INCLUDE_TYPE_FILES 
	${INCLUDE_TYPE_DIR}/Cloneable.h 
	${INCLUDE_TYPE_DIR}/Container.h
	${INCLUDE_TYPE_DIR}/Iterators.h 
	${INCLUDE_TYPE_DIR}/Journal.h 
	${INCLUDE_TYPE_DIR}/Node.h 
	${INCLUDE_TYPE_DIR}/Singleton.h)
#INCLUDE_TYPE_AUTOMATIC
set (INCLUDE_TYPE_AUTOMATIC_DIR ${INCLUDE_TYPE_DIR}/automatic)
set (INCLUDE_TYPE_AUTOMATIC_FILE 
	${INCLUDE_TYPE_AUTOMATIC_DIR}/Destroy.h)
#INCLUDE_TYPE_AUTOMATIC_DESTROY
set (INCLUDE_TYPE_AUTOMATIC_DESTROY_DIR ${INCLUDE_TYPE_AUTOMATIC_DIR}/destroy)
set (INCLUDE_TYPE_AUTOMATIC_DESTROY_FILES
	${INCLUDE_TYPE_AUTOMATIC_DESTROY_DIR}/Base.h 
	${INCLUDE_TYPE_AUTOMATIC_DESTROY_DIR}/Function.h 
	${INCLUDE_TYPE_AUTOMATIC_DESTROY_DIR}/Management.h)
#INCLUDE_TYPE_CONSTANT
set (INCLUDE_TYPE_CONSTANT_DIR ${INCLUDE_TYPE_DIR}/constant)
set (INCLUDE_TYPE_CONSTANT_FILE
	${INCLUDE_TYPE_CONSTANT_DIR}/String.h)
#INCLUDE_TYPE_CONTAINER
set (INCLUDE_TYPE_CONTAINER_DIR ${INCLUDE_TYPE_DIR}/container)
set (INCLUDE_TYPE_CONTAINER_FILE 
	${INCLUDE_TYPE_CONTAINER_DIR}/Array.h 
	${INCLUDE_TYPE_CONTAINER_DIR}/Base.h 
	${INCLUDE_TYPE_CONTAINER_DIR}/Element.h 
	${INCLUDE_TYPE_CONTAINER_DIR}/Vector.h)
#INCLUDE_TYPE_CONTAINER_ARRAY
set (INCLUDE_TYPE_CONTAINER_ARRAY_DIR ${INCLUDE_TYPE_CONTAINER_DIR}/array)
set (INCLUDE_TYPE_CONTAINER_ARRAY_FILE 
	${INCLUDE_TYPE_CONTAINER_ARRAY_DIR}/Definition.h 
	${INCLUDE_TYPE_CONTAINER_ARRAY_DIR}/Get.h 
	${INCLUDE_TYPE_CONTAINER_ARRAY_DIR}/Iterator.h)	
#INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR
set (INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DIR ${INCLUDE_TYPE_CONTAINER_ARRAY_DIR}/iterator)
set (INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_FILE 
	${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DIR}/Definition.h)
#INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION
set (INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_DIR ${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DIR}/definition)
set (INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_FILES 
	${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_DIR}/ConstIterator.h 
	${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_DIR}/Iterator.h)
#INCLUDE_TYPE_CONTAINER_DEFINITION
set (INCLUDE_TYPE_CONTAINER_DEFINITION_DIR ${INCLUDE_TYPE_CONTAINER_DIR}/definition)
set (INCLUDE_TYPE_CONTAINER_DEFINITION_FILES 
	${INCLUDE_TYPE_CONTAINER_DEFINITION_DIR}/Base.h 
	${INCLUDE_TYPE_CONTAINER_DEFINITION_DIR}/IsType.h)
#INCLUDE_TYPE_CONTAINER_ELEMENT
set (INCLUDE_TYPE_CONTAINER_ELEMENT_DIR ${INCLUDE_TYPE_CONTAINER_DIR}/element)
set (INCLUDE_TYPE_CONTAINER_ELEMENT_FILES 
	${INCLUDE_TYPE_CONTAINER_ELEMENT_DIR}/Base.h 
	${INCLUDE_TYPE_CONTAINER_ELEMENT_DIR}/IsType.h)
#INCLUDE_TYPE_CONTAINER_MEMBER
set (INCLUDE_TYPE_CONTAINER_MEMBER_DIR ${INCLUDE_TYPE_CONTAINER_DIR}/member)
set (INCLUDE_TYPE_CONTAINER_MEMBER_FILES
	${INCLUDE_TYPE_CONTAINER_MEMBER_DIR}/M_StandardContainer.h)
#INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY
set (INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR ${INCLUDE_TYPE_CONTAINER_MEMBER_DIR}/capacity)
set (INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_FILES
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_Capacity.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_Empty.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_MaximumSize.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_Reserve.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_Resize.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_ShrinkToFit.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_DIR}/M_Size.h)
#INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT
set (INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_DIR ${INCLUDE_TYPE_CONTAINER_MEMBER_DIR}/element)
set (INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_FILES 
	${INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_DIR}/M_Element.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_DIR}/M_First.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_DIR}/M_Last.h)
#INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR
set (INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_DIR ${INCLUDE_TYPE_CONTAINER_MEMBER_DIR}/iterator)
set (INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_FILES
	${INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_DIR}/M_ConstIterator.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_DIR}/M_ConstReverseIterator.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_DIR}/M_Iterator.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_DIR}/M_ReverseIterator.h)
#INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER
set (INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR ${INCLUDE_TYPE_CONTAINER_MEMBER_DIR}/modifier)
set (INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_FILES 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Assign.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Clear.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Emplace.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_EmplaceBack.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Erase.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Fill.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Insert.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_PopBack.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_PushBack.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_DIR}/M_Swap.h)
#INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER
set (INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER_DIR ${INCLUDE_TYPE_CONTAINER_MEMBER_DIR}/observer)
set (INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER_FILES
	${INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER_DIR}/M_Data.h 
	${INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER_DIR}/M_GetAllocator.h)
#INCLUDE_TYPE_CONTAINER_STANDARD
set (INCLUDE_TYPE_CONTAINER_STANDARD_DIR ${INCLUDE_TYPE_CONTAINER_DIR}/standard)
#INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR
set (INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_DIR ${INCLUDE_TYPE_CONTAINER_STANDARD_DIR}/vector)
set (INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_FILES 
	${INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_DIR}/ConstIterator.h 
	${INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_DIR}/ConstReverseIterator.h 
	${INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_DIR}/Iterator.h 
	${INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_DIR}/ReverseIterator.h)
#INCLUDE_TYPE_CONTAINER_VECTOR
set (INCLUDE_TYPE_CONTAINER_VECTOR_DIR ${INCLUDE_TYPE_CONTAINER_DIR}/vector)
set (INCLUDE_TYPE_CONTAINER_VECTOR_FILES 
	${INCLUDE_TYPE_CONTAINER_VECTOR_DIR}/Definition.h
	${INCLUDE_TYPE_CONTAINER_VECTOR_DIR}/Iterator.h)
#INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR ${INCLUDE_TYPE_CONTAINER_VECTOR_DIR}/iterator)
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_FILES 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR}/Definition.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR}/Handle.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR}/Input.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR}/RandomAccess.h)
#INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_DIR ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR}/definition)
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_FILES 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_DIR}/ConstIterator.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_DIR}/IsType.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_DIR}/Iterator.h)
#INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DIR ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DIR}/handle)
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_FILES 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DIR}/ConstIterator.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DIR}/ConstReverseIterator.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DIR}/Iterator.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DIR}/ReverseIterator.h)
#INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_DIR ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DIR}/definition)
set (INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_FILES 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_DIR}/ConstIterator.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_DIR}/IsType.h 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_DIR}/Iterator.h)
#INCLUDE_TYPE_ITERATOR
set (INCLUDE_TYPE_ITERATOR_DIR ${INCLUDE_TYPE_DIR}/iterator)
set (INCLUDE_TYPE_ITERATOR_FILES 
	${INCLUDE_TYPE_ITERATOR_DIR}/Base.h 
	${INCLUDE_TYPE_ITERATOR_DIR}/Tag.h)
#INCLUDE_TYPE_ITERATOR_DERIVED
set (INCLUDE_TYPE_ITERATOR_DERIVED_DIR ${INCLUDE_TYPE_ITERATOR_DIR}/derived)
set (INCLUDE_TYPE_ITERATOR_DERIVED_FILES 
	${INCLUDE_TYPE_ITERATOR_DERIVED_DIR}/Definition.h 
	${INCLUDE_TYPE_ITERATOR_DERIVED_DIR}/Info.h)
#INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION
set (INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION_DIR ${INCLUDE_TYPE_ITERATOR_DERIVED_DIR}/definition)
set (INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION_FILES 
	${INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION_DIR}/Base.h 
	${INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION_DIR}/IsType.h)
#iNCLUDE_TYPE_ITERATOR_DERIVED_INFO
set (INCLUDE_TYPE_ITERATOR_DERIVED_INFO_DIR ${INCLUDE_TYPE_ITERATOR_DERIVED_DIR}/info)
set (INCLUDE_TYPE_ITERATOR_DERIVED_INFO_FILES 
	${INCLUDE_TYPE_ITERATOR_DERIVED_INFO_DIR}/IsType.h)
#INCLUDE_TYPE_ITERATOR_HANDLE
set (INCLUDE_TYPE_ITERATOR_HANDLE_DIR ${INCLUDE_TYPE_ITERATOR_DIR}/handle)
set (INCLUDE_TYPE_ITERATOR_HANDLE_FILES 
	${INCLUDE_TYPE_ITERATOR_HANDLE_DIR}/Definition.h
	${INCLUDE_TYPE_ITERATOR_HANDLE_DIR}/Info.h)
#INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION
set (INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION_DIR ${INCLUDE_TYPE_ITERATOR_HANDLE_DIR}/definition)
set (INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION_FILES
	${INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION_DIR}/Base.h 
	${INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION_DIR}/IsType.h)
#INCLUDE_TYPE_ITERATOR_HANDLE_INFO
set (INCLUDE_TYPE_ITERATOR_HANDLE_INFO_DIR ${INCLUDE_TYPE_ITERATOR_HANDLE_DIR}/info)
set (INCLUDE_TYPE_ITERATOR_HANDLE_INFO_FILES
	${INCLUDE_TYPE_ITERATOR_HANDLE_INFO_DIR}/IsType.h)
#INCLUDE_TYPE_ITERATOR_MEMBER
set (INCLUDE_TYPE_ITERATOR_MEMBER_DIR ${INCLUDE_TYPE_ITERATOR_DIR}/member)
set (INCLUDE_TYPE_ITERATOR_MEMBER_FILES
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Arithmetic.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Assignment.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Decrement.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Equality.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Increment.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Inequality.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_LeftValue.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_Offset.h 
	${INCLUDE_TYPE_ITERATOR_MEMBER_DIR}/M_RightValue.h)
#INCLUDE_TYPE_ITERATOR_TAG
set (INCLUDE_TYPE_ITERATOR_TAG_DIR ${INCLUDE_TYPE_ITERATOR_DIR}/tag)
set (INCLUDE_TYPE_ITERATOR_TAG_FILES
	${INCLUDE_TYPE_ITERATOR_TAG_DIR}/Bidirectional.h 
	${INCLUDE_TYPE_ITERATOR_TAG_DIR}/Forward.h 
	${INCLUDE_TYPE_ITERATOR_TAG_DIR}/Input.h 
	${INCLUDE_TYPE_ITERATOR_TAG_DIR}/Output.h 
	${INCLUDE_TYPE_ITERATOR_TAG_DIR}/RandomAccess.h)
#INCLUDE_TYPE_JOURNAL
set (INCLUDE_TYPE_JOURNAL_DIR ${INCLUDE_TYPE_DIR}/journal)
set (INCLUDE_TYPE_JOURNAL_FILES 
	${INCLUDE_TYPE_JOURNAL_DIR}/Trait.h)
#INCLUDE_TYPE_NODE
set (INCLUDE_TYPE_NODE_DIR ${INCLUDE_TYPE_DIR}/node)
set (INCLUDE_TYPE_NODE_FILES 
	${INCLUDE_TYPE_NODE_DIR}/Child.h
	${INCLUDE_TYPE_NODE_DIR}/Direction.h
	${INCLUDE_TYPE_NODE_DIR}/Track.h)
#INCLUDE_TYPE_NODE_DIRECTION
set (INCLUDE_TYPE_NODE_DIRECTION_DIR ${INCLUDE_TYPE_NODE_DIR}/direction)
set (INCLUDE_TYPE_NODE_DIRECTION_FILES
	${INCLUDE_TYPE_NODE_DIRECTION_DIR}/Index.h)
#INCLUDE_TYPE_TRAIT
set (INCLUDE_TYPE_TRAIT_DIR ${INCLUDE_TYPE_DIR}/trait)
set (INCLUDE_TYPE_TRAIT_FILES 
	${INCLUDE_TYPE_TRAIT_DIR}/Integers.h 
	${INCLUDE_TYPE_TRAIT_DIR}/Object.h 
	${INCLUDE_TYPE_TRAIT_DIR}/Pointer.h 
	${INCLUDE_TYPE_TRAIT_DIR}/Types.h)
#INCLUDE_TYPE_TRAIT_CONDITIONAL
set (INCLUDE_TYPE_TRAIT_CONDITIONAl_DIR ${INCLUDE_TYPE_TRAIT_DIR}/conditional)
set (INCLUDE_TYPE_TRAIT_CONDITIONAl_FILES
	${INCLUDE_TYPE_TRAIT_CONDITIONAl_DIR}/And.h
	${INCLUDE_TYPE_TRAIT_CONDITIONAl_DIR}/Index.h
	${INCLUDE_TYPE_TRAIT_CONDITIONAl_DIR}/Or.h)
#INCLUDE_TYPE_TRAIT_INTEGERS
set (INCLUDE_TYPE_TRAIT_INTEGERS_DIR ${INCLUDE_TYPE_TRAIT_DIR}/integers)
set (INCLUDE_TYPE_TRAIT_INTEGERS_FILES
	${INCLUDE_TYPE_TRAIT_INTEGERS_DIR}/Filler.h 
	${INCLUDE_TYPE_TRAIT_INTEGERS_DIR}/Function.h 
	${INCLUDE_TYPE_TRAIT_INTEGERS_DIR}/GetIndex.h 
	${INCLUDE_TYPE_TRAIT_INTEGERS_DIR}/GetSize.h 
	${INCLUDE_TYPE_TRAIT_INTEGERS_DIR}/IsContainValue.h 
	${INCLUDE_TYPE_TRAIT_INTEGERS_DIR}/ToTypeArray.h)
#INCLUDE_TYPE_TRAIT_TYPES
set (INCLUDE_TYPE_TRAIT_TYPES_DIR ${INCLUDE_TYPE_TRAIT_DIR}/types)
set (INCLUDE_TYPE_TRAIT_TYPES_FILES 
	${INCLUDE_TYPE_TRAIT_TYPES_DIR}/Base.h 
	${INCLUDE_TYPE_TRAIT_TYPES_DIR}/Filler.h 
	${INCLUDE_TYPE_TRAIT_TYPES_DIR}/Function.h 
	${INCLUDE_TYPE_TRAIT_TYPES_DIR}/GetIndex.h 
	${INCLUDE_TYPE_TRAIT_TYPES_DIR}/GetSize.h)

#SOURCE
set (SOURCE_DIR ${PROJECT_SOURCE_DIR}/../scr)
#SOURCE_IO
set (SOURCE_IO_DIR ${SOURCE_DIR}/io)
set (SOURCE_IO_FILES
	${SOURCE_IO_DIR}/Stream.cpp)

#SOURCE_GROUP_HEADER
set (SG_HEADER_STR "Header Files")
source_group(${SG_HEADER_STR} FILES ${INCLUDE_FILES})
#SOURCE_GROUP_HEADER_IO
set (SG_HEADER_IO_STR "${SG_HEADER_STR}\\io")
source_group(${SG_HEADER_IO_STR} FILES ${INCLUDE_IO_FILES})
#SOURCE_GROUP_HEADER_IO_STREAM
set (SG_HEADER_IO_STREAM_STR "${SG_HEADER_IO_STR}\\stream")
source_group(${SG_HEADER_IO_STREAM_STR} FILES ${INCLUDE_IO_STREAM_FILES})
#SOURCE_GROUP_HEADER_IO_STREAM_FILE
set (SG_HEADER_IO_STREAM_FILE_STR "${SG_HEADER_IO_STREAM_STR}\\file")
source_group(${SG_HEADER_IO_STREAM_FILE_STR} FILES ${INCLUDE_IO_STREAM_FILE_FILES})
#SOURCE_GROUP_HEADER_TEST
set (SG_HEADER_TEST_STR "${SG_HEADER_STR}\\test")
source_group(${SG_HEADER_TEST_STR} FILES ${INCLUDE_TEST_FILES})
#SOURCE_GROUP_HEADER_TEST_TEST
set (SG_HEADER_TEST_TEST_STR "${SG_HEADER_TEST_STR}\\test")
source_group(${SG_HEADER_TEST_TEST_STR} FILES ${INCLUDE_TEST_TEST_FILES})
#SOURCE_GROUP_HEADER_TEST_TEST_INFO
set (SG_HEADER_TEST_TEST_INFO_STR "${SG_HEADER_TEST_TEST_STR}\\info")
source_group(${SG_HEADER_TEST_TEST_INFO_STR} FILES ${INCLUDE_TEST_TEST_INFO_FILES})
#SOURCE_GROUP_HEADER_TEST_TEST_MESSAGE
set (SG_HEADER_TEST_TEST_MESSAGE_STR "${SG_HEADER_TEST_TEST_STR}\\message")
source_group(${SG_HEADER_TEST_TEST_MESSAGE_STR} FILES ${INCLUDE_TEST_TEST_MESSAGE_FILES})
#SOURCE_GROUP_HEADER_TYPE
set (SG_HEADER_TYPE_STR "${SG_HEADER_STR}\\type")
source_group(${SG_HEADER_TYPE_STR} FILES ${INCLUDE_TYPE_FILES})
#SOURCE_GROUP_HEADER_TYPE_AUTOMATIC
set (SG_HEADER_TYPE_AUTOMATIC_STR "${SG_HEADER_TYPE_STR}\\automatic")
source_group(${SG_HEADER_TYPE_AUTOMATIC_STR} FILES ${INCLUDE_TYPE_AUTOMATIC_FILE})
#SOURCE_GROUP_HEADER_TYPE_AUTOMATIC_DESTROY
set (SG_HEADER_TYPE_AUTOMATIC_DESTROY_STR "${SG_HEADER_TYPE_AUTOMATIC_STR}\\destroy")
source_group(${SG_HEADER_TYPE_AUTOMATIC_DESTROY_STR} FILES ${INCLUDE_TYPE_AUTOMATIC_DESTROY_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONSTANT
set (SG_HEADER_TYPE_CONSTANT_STR "${SG_HEADER_TYPE_STR}\\constant")
source_group(${SG_HEADER_TYPE_CONSTANT_STR} FILES ${INCLUDE_TYPE_CONSTANT_FILE})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER
set (SG_HEADER_TYPE_CONTAINER_STR "${SG_HEADER_TYPE_STR}\\container")
source_group(${SG_HEADER_TYPE_CONTAINER_STR} FILES ${INCLUDE_TYPE_CONTAINER_FILE})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_ARRAY
set (SG_HEADER_TYPE_CONTAINER_ARRAY_STR "${SG_HEADER_TYPE_CONTAINER_STR}\\array")
source_group(${SG_HEADER_TYPE_CONTAINER_ARRAY_STR} FILES ${INCLUDE_TYPE_CONTAINER_ARRAY_FILE})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR
set (SG_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR_STR "${SG_HEADER_TYPE_CONTAINER_ARRAY_STR}\\iterator")
source_group(${SG_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR_STR} FILES ${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_FILE})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION
set (SG_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_STR "${SG_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR_STR}\\definition")
source_group(${SG_HEADER_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_STR} FILES ${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_DEFINITION
set (SG_HEADER_TYPE_CONTAINER_DEFINITION_STR "${SG_HEADER_TYPE_CONTAINER_STR}\\definition")
source_group(${SG_HEADER_TYPE_CONTAINER_DEFINITION_STR} FILES ${INCLUDE_TYPE_CONTAINER_DEFINITION_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_ELEMENT
set (SG_HEADER_TYPE_CONTAINER_ELEMENT_STR "${SG_HEADER_TYPE_CONTAINER_STR}\\element")
source_group(${SG_HEADER_TYPE_CONTAINER_ELEMENT_STR} FILES ${INCLUDE_TYPE_CONTAINER_ELEMENT_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_MEMBER
set (SG_HEADER_TYPE_CONTAINER_MEMBER_STR "${SG_HEADER_TYPE_CONTAINER_STR}\\member")
source_group(${SG_HEADER_TYPE_CONTAINER_MEMBER_STR} FILES ${INCLUDE_TYPE_CONTAINER_MEMBER_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_MEMBER_CAPACITY
set (SG_HEADER_TYPE_CONTAINER_MEMBER_CAPACITY_STR "${SG_HEADER_TYPE_CONTAINER_MEMBER_STR}\\capacity")
source_group(${SG_HEADER_TYPE_CONTAINER_MEMBER_CAPACITY_STR} FILES ${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_MEMBER_ELEMENT
set (SG_HEADER_TYPE_CONTAINER_MEMBER_ELEMENT_STR "${SG_HEADER_TYPE_CONTAINER_MEMBER_STR}\\element")
source_group(${SG_HEADER_TYPE_CONTAINER_MEMBER_ELEMENT_STR} FILES ${INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_MEMBER_ITERATOR
set (SG_HEADER_TYPE_CONTAINER_MEMBER_ITERATOR_STR "${SG_HEADER_TYPE_CONTAINER_MEMBER_STR}\\iterator")
source_group(${SG_HEADER_TYPE_CONTAINER_MEMBER_ITERATOR_STR} FILES ${INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_MEMBER_MODIFIER
set (SG_HEADER_TYPE_CONTAINER_MEMBER_MODIFIER_STR "${SG_HEADER_TYPE_CONTAINER_MEMBER_STR}\\modifier")
source_group(${SG_HEADER_TYPE_CONTAINER_MEMBER_MODIFIER_STR} FILES ${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_MEMBER_OBSERVER
set (SG_HEADER_TYPE_CONTAINER_MEMBER_OBSERVER_STR "${SG_HEADER_TYPE_CONTAINER_MEMBER_STR}\\observer")
source_group(${SG_HEADER_TYPE_CONTAINER_MEMBER_OBSERVER_STR} FILES ${INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_STANDARD
set (SG_HEADER_TYPE_CONTAINER_STANDARD_STR "${SG_HEADER_TYPE_CONTAINER_STR}\\standard")
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_STANDARD_VECTOR
set (SG_HEADER_TYPE_CONTAINER_STANDARD_VECTOR_STR "${SG_HEADER_TYPE_CONTAINER_STANDARD_STR}\\vector")
source_group(${SG_HEADER_TYPE_CONTAINER_STANDARD_VECTOR_STR} FILES ${INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_VECTOR
set (SG_HEADER_TYPE_CONTAINER_VECTOR_STR "${SG_HEADER_TYPE_CONTAINER_STR}\\vector")
source_group(${SG_HEADER_TYPE_CONTAINER_VECTOR_STR} FILES ${INCLUDE_TYPE_CONTAINER_VECTOR_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR
set (SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_STR "${SG_HEADER_TYPE_CONTAINER_VECTOR_STR}\\iterator")
source_group(${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_STR} FILES ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION
set (SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_STR "${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_STR}\\definition")
source_group(${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_STR} FILES ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE
set (SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_STR "${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_STR}\\handle")
source_group(${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_STR} FILES ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_FILES})
#SOURCE_GROUP_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION
set (SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_STR "${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_STR}\\definition")
source_group(${SG_HEADER_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_STR} FILES ${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR
set (SG_HEADER_TYPE_ITERATOR_STR "${SG_HEADER_TYPE_STR}\\iterator")
source_group(${SG_HEADER_TYPE_ITERATOR_STR} FILES ${INCLUDE_TYPE_ITERATOR_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_DERIVED
set (SG_HEADER_TYPE_ITERATOR_DERIVED_STR "${SG_HEADER_TYPE_ITERATOR_STR}\\derived")
source_group(${SG_HEADER_TYPE_ITERATOR_DERIVED_STR} FILES ${INCLUDE_TYPE_ITERATOR_DERIVED_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_DERIVED_DEFINITION
set (SG_HEADER_TYPE_ITERATOR_DERIVED_DEFINITION_STR "${SG_HEADER_TYPE_ITERATOR_DERIVED_STR}\\definition")
source_group(${SG_HEADER_TYPE_ITERATOR_DERIVED_DEFINITION_STR} FILES ${INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_DERIVED_INFO
set (SG_HEADER_TYPE_ITERATOR_DERIVED_INFO_STR "${SG_HEADER_TYPE_ITERATOR_DERIVED_STR}\\info")
source_group(${SG_HEADER_TYPE_ITERATOR_DERIVED_INFO_STR} FILES ${INCLUDE_TYPE_ITERATOR_DERIVED_INFO_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_HANDLE
set (SG_HEADER_TYPE_ITERATOR_HANDLE_STR "${SG_HEADER_TYPE_ITERATOR_STR}\\handle")
source_group(${SG_HEADER_TYPE_ITERATOR_HANDLE_STR} FILES ${INCLUDE_TYPE_ITERATOR_HANDLE_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_HANDLE_DEFINITION
set (SG_HEADER_TYPE_ITERATOR_HANDLE_DEFINITION_STR "${SG_HEADER_TYPE_ITERATOR_HANDLE_STR}\\definition")
source_group(${SG_HEADER_TYPE_ITERATOR_HANDLE_DEFINITION_STR} FILES ${INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_HANDLE_INFO
set (SG_HEADER_TYPE_ITERATOR_HANDLE_INFO_STR "${SG_HEADER_TYPE_ITERATOR_HANDLE_STR}\\info")
source_group(${SG_HEADER_TYPE_ITERATOR_HANDLE_INFO_STR} FILES ${INCLUDE_TYPE_ITERATOR_HANDLE_INFO_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_MEMBER
set (SG_HEADER_TYPE_ITERATOR_MEMBER_STR "${SG_HEADER_TYPE_ITERATOR_STR}\\member")
source_group(${SG_HEADER_TYPE_ITERATOR_MEMBER_STR} FILES ${INCLUDE_TYPE_ITERATOR_MEMBER_FILES})
#SOURCE_GROUP_HEADER_TYPE_ITERATOR_TAG
set (SG_HEADER_TYPE_ITERATOR_TAG_STR "${SG_HEADER_TYPE_ITERATOR_STR}\\tag")
source_group(${SG_HEADER_TYPE_ITERATOR_TAG_STR} FILES ${INCLUDE_TYPE_ITERATOR_TAG_FILES})
#SOURCE_GROUP_HEADER_TYPE_JOURNAL
set (SG_HEADER_TYPE_JOURNAL_STR "${SG_HEADER_TYPE_STR}\\journal")
source_group(${SG_HEADER_TYPE_JOURNAL_STR} FILES ${INCLUDE_TYPE_JOURNAL_FILES})
#SOURCE_GROUP_HEADER_TYPE_NODE
set (SG_HEADER_TYPE_NODE_STR "${SG_HEADER_TYPE_STR}\\node")
source_group(${SG_HEADER_TYPE_NODE_STR} FILES ${INCLUDE_TYPE_NODE_FILES}) 
#SOURCE_GROUP_HEADER_TYPE_NODE_DIRECTION
set (SG_HEADER_TYPE_NODE_DIRECTION_STR "${SG_HEADER_TYPE_NODE_STR}\\direction")
source_group(${SG_HEADER_TYPE_NODE_DIRECTION_STR} FILES ${INCLUDE_TYPE_NODE_DIRECTION_FILES})
#SOURCE_GROUP_HEADER_TYPE_TRAIT
set (SG_HEADER_TYPE_TRAIT_STR "${SG_HEADER_TYPE_STR}\\trait")
source_group(${SG_HEADER_TYPE_TRAIT_STR} FILES ${INCLUDE_TYPE_TRAIT_FILES})
#SOURCE_GROUP_HEADER_TYPE_TRAIT_CONDITIONAL
set (SG_HEADER_TYPE_TRAIT_CONDITIONAL_STR "${SG_HEADER_TYPE_TRAIT_STR}\\conditional")
source_group(${SG_HEADER_TYPE_TRAIT_CONDITIONAL_STR} FILES ${INCLUDE_TYPE_TRAIT_CONDITIONAl_FILES})
#SOURCE_GROUP_HEADER_TYPE_TRAIT_INTEGERS
set (SG_HEADER_TYPE_TRAIT_INTEGERS_STR "${SG_HEADER_TYPE_TRAIT_STR}\\integres")
source_group(${SG_HEADER_TYPE_TRAIT_INTEGERS_STR} FILES ${INCLUDE_TYPE_TRAIT_INTEGERS_FILES})
#SOURCE_GROUP_HEADER_TYPE_TRAIT_TYPES
set (SG_HEADER_TYPE_TRAIT_TYPES_STR "${SG_HEADER_TYPE_TRAIT_STR}\\types")
source_group(${SG_HEADER_TYPE_TRAIT_TYPES_STR} FILES ${INCLUDE_TYPE_TRAIT_TYPES_FILES})

#SOURCE_GROUP_SOURCE
set (SG_SOURCE_STR "Source Files")
#SOURCE_GROUP_SOURCE_IO
set (SG_SOURCE_IO_STR "${SG_SOURCE_STR}\\io")
source_group(${SG_SOURCE_IO_STR} FILES ${SOURCE_IO_FILES})
	
set (HEADER_LIST 
	${INCLUDE_FILES} 
	${INCLUDE_IO_FILES} 
	${INCLUDE_IO_STREAM_FILES} 
	${INCLUDE_IO_STREAM_FILE_FILES} 
	${INCLUDE_TEST_FILES} 
	${INCLUDE_TEST_TEST_FILES} 
	${INCLUDE_TEST_TEST_INFO_FILES} 
	${INCLUDE_TEST_TEST_MESSAGE_FILES} 
	${INCLUDE_TYPE_FILES} 
	${INCLUDE_TYPE_AUTOMATIC_FILE} 
	${INCLUDE_TYPE_AUTOMATIC_DESTROY_FILES}
	${INCLUDE_TYPE_CONSTANT_FILE} 
	${INCLUDE_TYPE_CONTAINER_FILE} 
	${INCLUDE_TYPE_CONTAINER_ARRAY_FILE} 
	${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_FILE}
	${INCLUDE_TYPE_CONTAINER_ARRAY_ITERATOR_DEFINITION_FILES}
	${INCLUDE_TYPE_CONTAINER_DEFINITION_FILES}
	${INCLUDE_TYPE_CONTAINER_ELEMENT_FILES}
	${INCLUDE_TYPE_CONTAINER_MEMBER_FILES}
	${INCLUDE_TYPE_CONTAINER_MEMBER_CAPACITY_FILES}
	${INCLUDE_TYPE_CONTAINER_MEMBER_ELEMENT_FILES}
	${INCLUDE_TYPE_CONTAINER_MEMBER_ITERATOR_FILES} 
	${INCLUDE_TYPE_CONTAINER_MEMBER_MODIFIER_FILES} 
	${INCLUDE_TYPE_CONTAINER_MEMBER_OBSERVER_FILES} 
	${INCLUDE_TYPE_CONTAINER_STANDARD_VECTOR_FILES} 
	${INCLUDE_TYPE_CONTAINER_VECTOR_FILES} 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_FILES} 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_DEFINITION_FILES} 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_FILES} 
	${INCLUDE_TYPE_CONTAINER_VECTOR_ITERATOR_HANDLE_DEFINITION_FILES}
	${INCLUDE_TYPE_ITERATOR_FILES} 
	${INCLUDE_TYPE_ITERATOR_DERIVED_FILES} 
	${INCLUDE_TYPE_ITERATOR_DERIVED_DEFINITION_FILES} 
	${INCLUDE_TYPE_ITERATOR_DERIVED_INFO_FILES}
	${INCLUDE_TYPE_ITERATOR_HANDLE_FILES} 
	${INCLUDE_TYPE_ITERATOR_HANDLE_DEFINITION_FILES} 
	${INCLUDE_TYPE_ITERATOR_HANDLE_INFO_FILES}
	${INCLUDE_TYPE_ITERATOR_MEMBER_FILES} 
	${INCLUDE_TYPE_ITERATOR_TAG_FILES} 
	${INCLUDE_TYPE_JOURNAL_FILES} 
	${INCLUDE_TYPE_NODE_FILES} 
	${INCLUDE_TYPE_NODE_DIRECTION_FILES}
	${INCLUDE_TYPE_TRAIT_FILES}
	${INCLUDE_TYPE_TRAIT_CONDITIONAl_FILES}
	${INCLUDE_TYPE_TRAIT_INTEGERS_FILES}
	${INCLUDE_TYPE_TRAIT_TYPES_FILES})
	
set (SOURCE_LIST 
	${SOURCE_IO_FILES})

add_library(BrainMuscles STATIC ${HEADER_LIST} ${SOURCE_LIST})

set_property(TARGET BrainMuscles PROPERTY FOLDER "libraries")
