#TOOL
set (TOOL_DIR ${PROJECT_SOURCE_DIR}/../src/tool)
set (TOOL_HEADER_FILES
	${TOOL_DIR}/Environment.h
	${TOOL_DIR}/PreBuild.h)
set (TOOL_SOURCE_FILES
	${TOOL_DIR}/Environment.cpp
	${TOOL_DIR}/PreBuild.cpp)
#TOOL_ENVIRONMENT
set (TOOL_ENVIRONMENT_DIR ${TOOL_DIR}/environment)
set (TOOL_ENVIRONMENT_HEADER_FILES
	${TOOL_ENVIRONMENT_DIR}/Arguments.h
	${TOOL_ENVIRONMENT_DIR}/Flag.h)
set (TOOL_ENVIRONMENT_SOURCE_FILES
	${TOOL_ENVIRONMENT_DIR}/Arguments.cpp
	${TOOL_ENVIRONMENT_DIR}/Flag.cpp)
#TOOL_FILE
set (TOOL_FILE_DIR ${TOOL_DIR}/file)
set (TOOL_FILE_HEADER_FILES
	${TOOL_FILE_DIR}/Read.h)
set (TOOL_FILE_SOURCE_FILES
	${TOOL_FILE_DIR}/Read.cpp)
#TOOL_PREBUILD
set (TOOL_PREBUILD_DIR ${TOOL_DIR}/prebuild)
set (TOOL_PREBUILD_HEADER_FILES
	${TOOL_PREBUILD_DIR}/Flag.h)
set (TOOL_PREBUILD_SOURCE_FILES
	${TOOL_PREBUILD_DIR}/Flag.cpp)
#TOOL_SOURCE
set (TOOL_SOURCE_DIR ${TOOL_DIR}/source)
set (TOOL_SOURCE_HEADER_FILES
	${TOOL_SOURCE_DIR}/Column.h)
set (TOOL_SOURCE_SOURCE_FILES
	${TOOL_SOURCE_DIR}/Column.cpp)
#SOURCE_GROUP_TOOL
set (SG_HEADER_TOOL_STR "Header Files")
set (SG_SOURCE_TOOL_STR "Source Files")
source_group (${SG_HEADER_TOOL_STR} FILES ${TOOL_HEADER_FILES})
source_group (${SG_SOURCE_TOOL_STR} FILES ${TOOL_SOURCE_FILES})
#SOURCE_GROUP_TOOL_ENVIRONMENT
set (SG_HEADER_TOOL_ENVIRONMENT_STR "${SG_HEADER_TOOL_STR}\\environment")
set (SG_SOURCE_TOOL_ENVIRONMENT_STR "${SG_SOURCE_TOOL_STR}\\environment")
source_group (${SG_HEADER_TOOL_ENVIRONMENT_STR} FILES ${TOOL_ENVIRONMENT_HEADER_FILES})
source_group (${SG_SOURCE_TOOL_ENVIRONMENT_STR} FILES ${TOOL_ENVIRONMENT_SOURCE_FILES})
#SOURCE_GROUP_TOOL_FILE
set (SG_HEADER_TOOL_FILE_STR "${SG_HEADER_TOOL_STR}\\file")
set (SG_SOURCE_TOOL_FILE_STR "${SG_SOURCE_TOOL_STR}\\file")
source_group (${SG_HEADER_TOOL_FILE_STR} FILES ${TOOL_FILE_HEADER_FILES})
source_group (${SG_SOURCE_TOOL_FILE_STR} FILES ${TOOL_FILE_SOURCE_FILES})
#SOURCE_GROUP_TOOL_PREBUILD
set (SG_HEADER_TOOL_PREBUILD_STR "${SG_HEADER_TOOL_STR}\\prebuild")
set (SG_SOURCE_TOOL_PREBUILD_STR "${SG_SOURCE_TOOL_STR}\\prebuild")
source_group (${SG_HEADER_TOOL_PREBUILD_STR} FILES ${TOOL_PREBUILD_HEADER_FILES})
source_group (${SG_SOURCE_TOOL_PREBUILD_STR} FILES ${TOOL_PREBUILD_SOURCE_FILES})
#SOURCE_GROUP_TOOL_SOURCE
set (SG_HEADER_TOOL_SOURCE_STR "${SG_HEADER_TOOL_STR}\\source")
set (SG_SOURCE_TOOL_SOURCE_STR "${SG_SOURCE_TOOL_STR}\\source")
source_group (${SG_HEADER_TOOL_SOURCE_STR} FILES ${TOOL_SOURCE_HEADER_FILES})
source_group (${SG_SOURCE_TOOL_SOURCE_STR} FILES ${TOOL_SOURCE_SOURCE_FILES})
#HEADER_LISTS
set (HEADER_LIST
	${TOOL_HEADER_FILES}
	${TOOL_ENVIRONMENT_HEADER_FILES}
	${TOOL_FILE_HEADER_FILES}
	${TOOL_PREBUILD_HEADER_FILES}
	${TOOL_SOURCE_HEADER_FILES})
#SOURCE_LISTS
set (SOURCE_LIST
	${TOOL_SOURCE_FILES}
	${TOOL_ENVIRONMENT_SOURCE_FILES}
	${TOOL_FILE_SOURCE_FILES}
	${TOOL_PREBUILD_SOURCE_FILES}
	${TOOL_SOURCE_SOURCE_FILES})
#MAIN
set(TOOL_PREBUILD_MAIN_SOURCE ${TOOL_DIR}/PreBuild.main.cpp)
add_executable (PreBuild ${HEADER_LIST} ${SOURCE_LIST} ${TOOL_PREBUILD_MAIN_SOURCE})
target_include_directories(PreBuild PUBLIC ${TOOL_DIR})
set_property(TARGET PreBuild PROPERTY FOLDER tool)
