#EXPERIMENT_TEST_SIMPLE_JSON
set(EXPERIMENT_TEST_SIMPLE_JSON_DIR ${PROJECT_SOURCE_DIR}/../src/experiment/test/simple/json)

#EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION
set(EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_DIR ${EXPERIMENT_TEST_SIMPLE_JSON_DIR}/exception)
set(EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_HEADER_FILES 
	${EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_DIR}/BadCast.h)
set (EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_SOURCE_FILES
	${EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_DIR}/BadCast.cpp)
	
#SOURCE_GROUP
set (SG_HEADER_STR "Header Files")
set (SG_SOURCE_STR "Source Files")
source_group(${SG_HEADER_STR} FILES)
source_group(${SG_SOURCE_STR} FILES)
#SOURCE_GROUP_EXCEPTION
set (SG_HEADER_EXCEPTION_STR "${SG_HEADER_STR}\\exception")
set (SG_SOURCE_EXCEPTION_STR "${SG_SOURCE_STR}\\exception")
source_group(${SG_HEADER_EXCEPTION_STR} FILES ${EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_HEADER_FILES})
source_group(${SG_SOURCE_EXCEPTION_STR} FILES ${EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_SOURCE_FILES})

#HEADER_LISTS
set(HEADER_LIST
 ${EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_HEADER_FILES})
 
#SOURCE_LISTS
set(SOURCE_LIST
 ${EXPERIMENT_TEST_SIMPLE_JSON_EXCEPTION_SOURCE_FILES})

#MAIN_SOURCE
set(EXPERIMENT_TEST_SIMPLE_JSON_MAIN_SOURCE ${EXPERIMENT_TEST_SIMPLE_JSON_DIR}/json_main.cpp)

add_executable (Json ${HEADER_LIST} ${SOURCE_LIST} ${EXPERIMENT_TEST_SIMPLE_JSON_MAIN_SOURCE})
set_property(TARGET Json PROPERTY FOLDER experiment/test/simple)
target_link_libraries (Json BrainMuscles)